[gd_scene load_steps=19 format=3 uid="uid://c4pl1gcvgpwei"]

[ext_resource type="Script" uid="uid://5oljrws7erqi" path="res://bonus_menu.gd" id="1_0ardv"]
[ext_resource type="Texture2D" uid="uid://djvebnathbm2r" path="res://icon.svg" id="1_0h8gp"]
[ext_resource type="Texture2D" uid="uid://dvre3bnghdvwf" path="res://assets/in-game/coin/coin.png" id="2_c2efx"]
[ext_resource type="Theme" uid="uid://cw2c2a8jmrhke" path="res://src/theme.tres" id="2_cfpsb"]
[ext_resource type="Script" uid="uid://b42dqyn0dop0j" path="res://src/customScripts/3D_touch_button.gd" id="3_gobay"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mqhac"]
atlas = ExtResource("2_c2efx")
region = Rect2(0, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfi7c"]
atlas = ExtResource("2_c2efx")
region = Rect2(118, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0b2q"]
atlas = ExtResource("2_c2efx")
region = Rect2(236, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_sajbk"]
atlas = ExtResource("2_c2efx")
region = Rect2(354, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_oayho"]
atlas = ExtResource("2_c2efx")
region = Rect2(472, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbmcn"]
atlas = ExtResource("2_c2efx")
region = Rect2(590, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyswg"]
atlas = ExtResource("2_c2efx")
region = Rect2(708, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8exq"]
atlas = ExtResource("2_c2efx")
region = Rect2(826, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_goax5"]
atlas = ExtResource("2_c2efx")
region = Rect2(944, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeyp7"]
atlas = ExtResource("2_c2efx")
region = Rect2(1062, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe3t1"]
atlas = ExtResource("2_c2efx")
region = Rect2(1180, 0, 118, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt7l4"]
atlas = ExtResource("2_c2efx")
region = Rect2(1298, 0, 118, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_7xjrf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqhac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfi7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0b2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sajbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oayho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbmcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyswg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8exq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goax5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeyp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe3t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt7l4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Bonus_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ardv")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(99, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -150.0
offset_right = 500.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 50
columns = 3

[node name="choix1" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_cfpsb")
theme_override_font_sizes/font_size = 40
script = ExtResource("3_gobay")
metadata/_custom_type_script = "uid://b42dqyn0dop0j"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/choix1"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0h8gp")
expand_mode = 1
stretch_mode = 5

[node name="choix2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_cfpsb")
theme_override_font_sizes/font_size = 40
script = ExtResource("3_gobay")
metadata/_custom_type_script = "uid://b42dqyn0dop0j"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/choix2"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0h8gp")
expand_mode = 1
stretch_mode = 5

[node name="choix3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme = ExtResource("2_cfpsb")
theme_override_font_sizes/font_size = 40
script = ExtResource("3_gobay")
metadata/_custom_type_script = "uid://b42dqyn0dop0j"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/choix3"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0h8gp")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.0
offset_top = 121.0
offset_right = 260.0
offset_bottom = 176.0
grow_horizontal = 2
theme = ExtResource("2_cfpsb")
theme_override_font_sizes/font_size = 40
text = "CHOOSE AN ARTIFACT"
horizontal_alignment = 1

[node name="money" type="Label" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = 28.0
offset_right = 133.0
offset_bottom = -588.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("2_cfpsb")
theme_override_font_sizes/font_size = 32
text = "5  "
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(470, 42.5)
rotation = 1.5707964
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_7xjrf")
autoplay = "default"

[node name="body_button" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 18.0
offset_right = 152.0
offset_bottom = 92.0
focus_mode = 0
theme = ExtResource("2_cfpsb")
text = "View
Body
"
script = ExtResource("3_gobay")
metadata/_custom_type_script = "uid://b42dqyn0dop0j"

[connection signal="pressed" from="HBoxContainer/choix1" to="." method="_on_choix_1_pressed"]
[connection signal="pressed" from="HBoxContainer/choix2" to="." method="_on_choix_2_pressed"]
[connection signal="pressed" from="HBoxContainer/choix3" to="." method="_on_choix_3_pressed"]
